--- a/parcel/package.json
+++ b/parcel/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "tsc": "tsc ./src/index.ts",
+    "tsc-check": "tsc --noEmit ./src/index.ts",
     "dev": "parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
